--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "bootstrap-icons": "^1.9.1",
+        "firebase": "^9.14.0",
         "sweetalert2": "^11.4.29",
         "vue-sweetalert2": "^5.0.5"
     }
